# Fuzzhead

./: .gitignore  .gitmodules  Litepaper.md  README.md  index.html  package-lock.json  package.json  test-contracts.ts  tsconfig.json
.fuzz/: compiled.js  fuzz-local-bundle.mjs
Base-POC/: Cargo.toml  foundry.toml
Base-POC/benchmarks/: Makefile  README.md
Base-POC/benchmarks/src/: main.rs
Base-POC/script/: DeployVault.s.sol
Base-POC/src/: anvil_executor.rs  constructor.rs  main.rs  types.rs
Base-POC/test-contracts/: DemoVulnerableVault.sol  SecureContract.sol  SimpleToken.sol
Horizen-POC/: Cargo.toml  EVM_engine_roadmap.md
Horizen-POC/benchmarks/: Cargo.toml  README.md  benchmark-results.json
Horizen-POC/benchmarks/src/: main.rs
Horizen-POC/script/: DeployDemoVault.s.sol  DeployVulnVault.s.sol
Horizen-POC/src/: anvil_executor.rs  ast_parser.rs  contract_compiler.rs  fuzz-solidity.rs  fuzz_solidity.rs  main.rs  types.rs
Horizen-POC/test-contracts/: VaultContract.sol
Mina-POC/: .gitignore  package-lock.json  package.json  tsconfig.json
Mina-POC/.fuzz/: compiled.js  fuzz-local-bundle.mjs
Mina-POC/src/: fuzz-o1js.mjs
Mina-POC/test-contracts/: fail-test.ts  hello-world.ts  simple-test.ts  success-test.ts  sudoku.ts  voting.ts
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
lambda-layer/node-js/: package-lock.json  package.json
src/: fuzz-local.mjs  fuzz-o1js.mjs  fuzz-solidity.mjs  index.html  lambda-handler.mjs  simple.ts  testParser.ts
(+9 files in other folders)
