[package]
name = "fuzzhead-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-benchmarks"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
colored = "2.0"